--- a/src/components/QuoteCard.css
+++ b/src/components/QuoteCard.css
@@ -1,7 +1,8 @@
 .QuoteCard {
     display: flex;
+    justify-content: center;
     padding: 1.25em;
-    width: 400px;
+    width: 50vw;
     border: 1px solid #f8f8f8;
     border-radius: 2px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
@@ -16,4 +17,8 @@
   
   .QuoteCard blockquote {
     margin: 0 0 1rem 0;
+  }
+
+  .tablon{
+
   }
