--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,11 +1,10 @@
-.navbar{
-    background-color: lightblue;
-    padding: 0 0 0 1em;
-    
-}
-
-.navbar a{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 0.5rem;
-    font-weight: bold;
-}
+.Navbar {
+    background: #554478;
+    padding: 1em 2em;
+  }
+  
+  .Navbar * {
+    margin: 0;
+    color: white;
+  }
+  
